checks/cloud/azure/network/no_public_egress.yaml
terraform:
    links:
        - https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs/resources/network_security_rule
    good:
        - |-
          resource "azurerm_network_security_rule" "good_example" {
            direction                  = "Outbound"
            destination_address_prefix = "10.0.0.0/16"
            access                     = "Allow"
          }
    bad:
        - |-
          resource "azurerm_network_security_rule" "bad_example" {
            direction                  = "Outbound"
            destination_address_prefix = "0.0.0.0/0"
            access                     = "Allow"
          }
