checks/cloud/azure/network/sensitive_port_exposed_to_network.yaml
terraform:
  links:
    - https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs/resources/network_security_rule
  good:
    - |-
      resource "azurerm_resource_group" "example" {
        name     = "example-resources"
        location = "West Europe"
      }

      resource "azurerm_network_security_group" "good_example" {
        name                = "good-security-group"
        location            = azurerm_resource_group.example.location
        resource_group_name = azurerm_resource_group.example.name

        security_rule {
          name                       = "HTTP"
          priority                   = 1001
          direction                  = "Inbound"
          access                     = "Allow"
          protocol                   = "Tcp"
          source_port_range          = "*"
          destination_port_range     = "8080"
          source_address_prefix      = "10.0.0.0/8" # Restricted source
          destination_address_prefix = "*"
        }
      }
    - |-
      resource "azurerm_resource_group" "example" {
        name     = "example-resources"
        location = "West Europe"
      }

      resource "azurerm_network_security_group" "good_example2" {
        name                = "good-security-group"
        location            = azurerm_resource_group.example.location
        resource_group_name = azurerm_resource_group.example.name

        security_rule {
          name                       = "SSH"
          priority                   = 1001
          direction                  = "Inbound"
          access                     = "Allow"
          protocol                   = "Tcp"
          source_port_range          = "*"
          destination_port_range     = "22"
          source_address_prefix      = "192.168.1.0/24" # Restricted to specific network
          destination_address_prefix = "*"
        }
      }
  bad:
    - |-
      resource "azurerm_resource_group" "example" {
        name     = "example-resources"
        location = "West Europe"
      }

      resource "azurerm_network_security_group" "bad_example" {
        name                = "bad-security-group"
        location            = azurerm_resource_group.example.location
        resource_group_name = azurerm_resource_group.example.name

        security_rule {
          name                       = "Telnet"
          priority                   = 1001
          direction                  = "Inbound"
          access                     = "Allow"
          protocol                   = "Tcp"
          source_port_range          = "*"
          destination_port_range     = "23"
          source_address_prefix      = "*" # Open to all sources
          destination_address_prefix = "*"
        }
      }
    - |-
      resource "azurerm_resource_group" "example" {
        name     = "example-resources"
        location = "West Europe"
      }

      resource "azurerm_network_security_group" "bad_example2" {
        name                = "bad-security-group"
        location            = azurerm_resource_group.example.location
        resource_group_name = azurerm_resource_group.example.name

        security_rule {
          name                       = "FTP"
          priority                   = 1001
          direction                  = "Inbound"
          access                     = "Allow"
          protocol                   = "Tcp"
          source_port_range          = "*"
          destination_port_range     = "20-21"
          source_address_prefix      = "0.0.0.0/0" # Open to internet
          destination_address_prefix = "*"
        }
      }
